deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    # https://kubernetes.io/docs/concepts/overview/working-with-objects/common-labels/
    app.kubernetes.io/instance: K8S_SERVICE_NAME-instance
    app.kubernetes.io/name: K8S_SERVICE_NAME-service
  name: K8S_SERVICE_NAME-svc
  namespace: ys-ns
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    # refer to Deployment yaml metadata.name
    # must be unique per Deployment
    application-name: K8S_SERVICE_NAME-deployment
