deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: K8S_SERVICE_NAME-ingress
  annotations:
    kubernetes.io/ingress.class: ambassador
  namespace: ys-ns
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: K8S_SERVICE_NAME-svc # refer to Service name
                port:
                  number: 80
